<resources>
    <string name="app_name">Rent and Share Bikes</string>
    <string name="tb_addBikesRent">Add Bikes to Rent</string>
    <string name="tv_welcomeAddBikes">Bike Details</string>
    <string name="tv_orSelect">Or</string>
    <string name="atc_selectCondition">Select Condition</string>
    <string name="img_arrowCond">Arrow</string>
    <string name="et_bikeModel">Bike Model</string>
    <string name="et_bikeManufacturer">Manufacturer</string>
    <string name="et_bikePricePerDay">Price per hour</string>
    <string name="btn_saveBike">Save Bike</string>
    <string name="tb_addBikesShare">Add Bikes to Share</string>
    <string name="tv_welcomeShareBikes">Welcome to Share Bikes</string>
    <string name="et_bikeFNameShare">First Name</string>
    <string name="et_bikeLNameShare">Last Name</string>
    <string name="et_bikePNoShare">Phone Number</string>
    <string name="et_bikeEmailShare">Email Address</string>
    <string name="tv_orSelectShare">Or</string>
    <string name="atc_selectCondShare">Select Condition</string>
    <string name="img_arrowCondShare">Arrow</string>
    <string name="et_bikeModelShare">Bike Model</string>
    <string name="et_bikeManufactShare">Manufacturer</string>
    <string name="et_bikePricePerDayShare">Price per Day</string>
    <string name="tv_bikeShareAvDate">Available From</string>
    <string name="et_bikeShareAvDate">Date avail</string>
    <string name="btn_shareBike">Save Bike</string>
    <string name="tb_addBikeStore">Add Bike Stores</string>
    <string name="tv_addBikeStore">Bike Store Details</string>
    <string name="et_addStoreLocation">Store Location</string>
    <string name="et_addStoreAddress">Store Address</string>
    <string name="et_addStoreLatitude">Store Latitude</string>
    <string name="et_addStoreLongitude">Store Longitude</string>
    <string name="et_addStoreNoSlots">Number Slots</string>
    <string name="btn_saveBikeStore">Save Bike Store</string>
    <string name="tb_adminPage">Admin Page</string>
    <string name="tv_adminPage">Welcome to Admin Page</string>
    <string name="tv_adminDetails">Admin personal details</string>
    <string name="tv_adminPersonalDetails">Phone: \n0894644545 \n\nEmail: \nadmin@gmail.com</string>
    <string name="tv_adminBikeStores">Bike Stores Available</string>
    <string name="tv_adminBikeStoresAv">0</string>
    <string name="tv_adminBike">Bike available to Rent</string>
    <string name="tv_adminBikeAv">0</string>
    <string name="tv_adminBikeRented">Rented Bikes</string>
    <string name="tv_adminBikeRentedAv">0</string>
    <string name="tv_adminBikeShared">Bikes available to Share</string>
    <string name="tv_adminBikeSharedAv">0</string>
    <string name="tb_bikeStoreImageAddBikes">Bike Stores Available</string>
    <string name="tv_bikeStoreImageAddBikes">Select the Bike Store</string>
    <string name="tb_bikeStoreImageRentBikesCustomer">Bike Stores List</string>
    <string name="tv_bikeStoreImageRentBikesCustomer">Select the Bike Store</string>
    <string name="tb_bikeStoreImageShowBikesListAdmin">Bike Stores List</string>
    <string name="tv_bikeStoreImageShowBikesListAdmin">Select the Bike Store</string>
    <string name="tb_bikeStoreImageShowBikesListCustomer">Bike Stores List</string>
    <string name="tv_bikeStoreImageShowBikesListCustomer">Select the Bike Store</string>
    <string name="tb_bikeStoreImageShowBikesListMain">List of Bike Stores</string>
    <string name="tv_bikeStoreImageShowBikesListMain">Select the Bike Store</string>
    <string name="tb_bikeStoreImageShowStoresListAdmin">Bike Stores Available</string>
    <string name="tv_bikeStoreImageShowStoresListAdmin">List of Bike Stores</string>
    <string name="btn_addMoreStores">Add More Stores</string>
    <string name="btn_backToAdminPageStores">Back Admin Page</string>
    <string name="tb_bikeStoreImageShowStoresListCustomer">Bike Stores Available</string>
    <string name="tv_bikeStoreImageShowStoresListCustomer">Bike Stores Available</string>
    <string name="tb_bikeStoreImageShowStoresListMain">Bike Stores Available</string>
    <string name="tv_bikeStoreImageShowStoresListMain">List of Bike Stores</string>
    <string name="tv_bikeStoreListReturnBike">Select the Bike Store</string>
    <string name="tb_bikeStoreImgRemoveBikesSOwner">Remove the bike</string>
    <string name="tv_bikeStoreImgRemoveBikesSOwner">Select the Bike to be removed</string>
    <string name="tb_bikesImageRentBikesCustomer">Bikes available to rent</string>
    <string name="tv_bikesImageRentBikesCustomer">Select the Bike</string>
    <string name="tb_bikesImageRentBikesRented">Rented Bikes</string>
    <string name="tv_bikesImageRentBikesRented">Select the Bike</string>
    <string name="tb_bikesImageShowBikesListAdmin">Bikes Available to Rent</string>
    <string name="tv_bikesImageShowBikesListAdmin">List of Bikes</string>
    <string name="btn_addMoreBikesAdmin">Add More Bikes</string>
    <string name="btn_backToAdminPageBikes">Back Admin Page</string>
    <string name="tb_bikesImgShowBikesListAdminFull">All Bikes Available</string>
    <string name="tv_bikesImgShowBikesListAdminFull">List of Bikes</string>
    <string name="btn_addMoreBikesAdminFull">Add More Bikes</string>
    <string name="btn_backToAdminPageBikesFull">Back Admin Page</string>
    <string name="tb_bikesImageShowBikesListCustomAll">All Bikes Available</string>
    <string name="tv_bikesImageShowBikesListCustomAll">No Bikes available to rent</string>
    <string name="tb_bikesImageShowBikesListCustomer">List of Bikes Available</string>
    <string name="tv_bikesImageShowBikesListCustomer">List of Bikes</string>
    <string name="tb_bikesImageShowBikesListMainAll">All Bikes Available</string>
    <string name="tv_bikesImageShowBikesListMainAll">List of Bikes</string>
    <string name="tb_bikesImageShowBikesListMain">List of Bikes Available</string>
    <string name="tv_bikesImageShowBikesListMain">List of Bikes</string>
    <string name="tb_bikesImageShowBikesRentedAdmin">List of Rented Bikes</string>
    <string name="tv_bikesImageShowBikesRentedAdmin">No Bikes rented</string>
    <string name="tb_bikesImageShowBikesRentedCustomer">List of Rented Bikes</string>
    <string name="tv_bikesImageShowBikesRentedCustomer">List of Bikes</string>
    <string name="tb_bikesImageShowSharedBikesAdmin">Bikes available to share</string>
    <string name="tv_bikesImageShowSharedBikesAdmin">No Bikes available to be shared</string>
    <string name="tb_bikesImageShowSharedBikesMain">Bikes available to share</string>
    <string name="tv_bikesImageShowSharedBikesMain">No Bikes available to be shared</string>
    <string name="tv_bikeStoreImgShowBikesSNoOwner">No Bikes available to be shared</string>
    <string name="tv_bikesImageShowOwnSharedBikes">List of Bikes</string>
    <string name="btn_addMoreBikesShare">Add More Bikes</string>
    <string name="btn_backToCustomPageShare">Back Main Page</string>
    <string name="tv_bikesImageShowSBikesToUpdate">Select the bike to be update</string>
    <string name="tb_calculateCoordinates">Calculate Coordinates</string>
    <string name="tv_calculateCoordinates">Calculate Address Coordinates</string>
    <string name="et_locationAddress">Enter Location Address</string>
    <string name="btn_calculateCoordinates">Show Coordinates</string>
    <string name="tv_showStoreAddress">Store Address</string>
    <string name="tv_showLatitude">Latitude</string>
    <string name="tv_showLongitude">Longitude</string>
    <string name="btn_saveCoordinates">Save Coordinates</string>
    <string name="tv_changePassword">Change Your Password</string>
    <string name="et_enterOldPassword">Enter Old Password</string>
    <string name="et_enterNewPassword">Enter New Password</string>
    <string name="btn_updatePassword">Update Password</string>
    <string name="tb_welcomeContactUs">Contact Us</string>
    <string name="tv_welcomeContactUs">Please enter your contact details</string>
    <string name="et_nameContactUs">Name</string>
    <string name="et_emailContactUs">Email Address</string>
    <string name="et_subjectContactUs">Subject</string>
    <string name="tv_MessageContactUs">Message</string>
    <string name="btn_sendContactUs">Send</string>
    <string name="tb_customPageMain">User Main Page</string>
    <string name="tv_customPageMain">Welcome</string>
    <string name="tv_customPageServices">Select a service:</string>
    <string name="btn_rentBikesCustomer">Renting Bikes</string>
    <string name="btn_shareBikeCustomer">Sharing Bikes</string>
    <string name="tb_customPageRentBike">Renting Service</string>
    <string name="tv_customPageRentService">Bicycle renting service</string>
    <string name="tv_customPageRentBikes">Welcome</string>
    <string name="tv_customPageRentDetails">Your personal details</string>
    <string name="tv_customPageRentPersonalDetails">Your personal details:</string>
    <string name="tv_customPageRentPersonalAccount">Your personal Account:</string>
    <string name="tv_customPageBikeStores">Bikes Stores Available</string>
    <string name="tv_customPageBikeStoresAv">0</string>
    <string name="tv_customPageBikeRent">Bikes available to Rent</string>
    <string name="tv_customPageBikeRentAv">0</string>
    <string name="tv_customPageBikesRented">Rented Bikes</string>
    <string name="tv_customPageBikesRentedAv">0</string>
    <string name="tv_customPageRentAccount">Your account</string>
    <string name="open_customPageRent">Open</string>
    <string name="close_customPageRent">Close</string>
    <string name="tb_customPageShareBike">Sharing Service</string>
    <string name="tv_customPageShareService">Bicycle sharing service</string>
    <string name="tv_customPageShareBikes">Welcome</string>
    <string name="tv_customPageSharePersonalDetails">Your personal details:</string>
    <string name="tv_customPageSharePersonalAccount">Your personal Account:</string>
    <string name="tv_customPageBikesShared">Bikes added to share</string>
    <string name="tv_customPageBikesSharedAcc">0</string>
    <string name="tv_customPageBikesSAv">Bikes available to share</string>
    <string name="tv_customPageBikesShareAv">0</string>
    <string name="tv_customPageShareAccount">Your account</string>
    <string name="open_customPageShare">Open</string>
    <string name="close_customPageShare">Close</string>
    <string name="tv_editUserProfile">Edit your Profile</string>
    <string name="tv_fNameUserProfile">First Name</string>
    <string name="et_userFirstName">First Name: </string>
    <string name="tv_loginCustomer">Please enter your Log In details</string>
    <string name="et_emailLogCustomer">Email Address</string>
    <string name="et_passLogCustomer">Password</string>
    <string name="cb_remLogCustomer">Remember me</string>
    <string name="tv_forgotPassCustomer">Forgotten Password</string>
    <string name="btn_logInCustomer">Log In</string>
    <string name="btn_signUpCustomer">Register</string>
    <string name="tv_ResetPassword">Reset your Password</string>
    <string name="et_emailResetPassword">Enter your Email Address</string>
    <string name="btn_resetPass">Reset Password</string>
    <string name="mDUser_showStoresListRent">Bike Stores List</string>
    <string name="mDUser_showBikesListRent">Bikes Available</string>
    <string name="mDUser_showBikesListAll">Bikes Available All</string>
    <string name="mDUser_rentBikesRent">Rent a Bike</string>
    <string name="mDUser_showBikesRentedRent">Rented Bikes</string>
    <string name="mDUser_returnBikesRent">Return Bikes</string>
    <string name="mDUser_scanBarcode">Scan QR Code</string>
    <string name="menu_myAccount">My Account</string>
    <string name="menu_storesAvailable">Stores Available</string>
    <string name="menu_bikesAvToRent">Bikes Available</string>
    <string name="menu_bikesAvToRentAll">Bikes Available All</string>
    <string name="menu_bikesAvToShare">Bikes to Share</string>
</resources>