<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/userShow_storesList"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/mDUser_showStoresListRent" />

        <item
            android:id="@+id/userShow_bikesList"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/mDUser_showBikesListRent" />

        <item
            android:id="@+id/userShow_bikesListAll"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/mDUser_showBikesListAll" />

        <item
            android:id="@+id/userRent_bikes"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/mDUser_rentBikesRent" />

        <item
            android:id="@+id/userShow_bikesRented"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/mDUser_showBikesRentedRent" />

        <item
            android:id="@+id/userReturn_bikes"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/mDUser_returnBikesRent" />

        <item
        android:id="@+id/userScan_QRCode"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/mDUser_scanBarcode" />
    </group>

</menu>