<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myAccount"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_myAccount" />

        <item
            android:id="@+id/bikeStoreAv"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_storesAvailable" />

        <item
            android:id="@+id/bikeAvToRent"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_bikesAvToRent" />

        <item
            android:id="@+id/bikeAvToRentAll"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_bikesAvToRentAll" />

        <item
            android:id="@+id/bikeAvToShare"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_bikesAvToShare" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_settings" />
    </group>
</menu>