<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_customer_page_rent_bikes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:showIn="@layout/activity_customer_page_rent_bikes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".CustomerPageRentBikes">

        <TextView
            android:id="@+id/tvCustomRentService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_customPageRentService"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCustomPageRent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_customPageRentBikes"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvCustomPageRentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_customPageRentDetails"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvCustomPageRentPerDetails"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="#f2f2f2"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/tv_customPageRentPersonalDetails"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,TextViewEdits" />

        <TextView
            android:id="@+id/tvCustomPageRentAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_customPageRentPersonalAccount"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".CustomerPageRentBikes">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".CustomerPageRentBikes">

                <!--BikesRent Stores Available-->
                <TextView
                    android:id="@+id/tvStoresCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tv_customPageBikeStores"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <!--    BikesRent Available to Rent-->
                <TextView
                    android:id="@+id/tvBikesCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tv_customPageBikeRent"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <!--    BikesRent Rented-->
                <TextView
                    android:id="@+id/tvRentedCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tv_customPageBikesRented"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".CustomerPageRentBikes">

                <TextView
                    android:id="@+id/tvStoresAvCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="#ffffff"
                    android:text="@string/tv_customPageBikeStoresAv"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBikesAvCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="#ffffff"
                    android:text="@string/tv_customPageBikeRentAv"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBikesRentedCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="#ffffff"
                    android:text="@string/tv_customPageBikesRentedAv"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navViewCustomRent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/customer_header_rent_bikes"
        app:itemTextAppearance="?android:textAppearanceMedium"
        app:itemTextColor="@drawable/drawer_item_color"
        app:menu="@menu/menu_drawer_customer_rent_bikes" />

</androidx.drawerlayout.widget.DrawerLayout>
