<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLogUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:text="@string/tv_loginCustomer"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Email Address -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailLogUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/et_emailLogCustomer"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassLogUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/et_passLogCustomer"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/remembermy_check_box"
            android:text="@string/cb_remLogCustomer"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvForgotPassUser"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/tv_forgotPassCustomer"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/btnLoginUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_logInCustomer"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnSignUpUser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_signUpCustomer"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
