<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"    tools:context=".CustomerPageMain">

        <TextView
            android:id="@+id/tvCustomPageMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_customPageMain"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRentBikeCustom"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCustomPageMain"
            android:layout_alignStart="@+id/tvCustomPageMain"
            android:layout_marginTop="20dp"
            android:text="@string/btn_rentBikesCustomer"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnShareBikesCustom"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCustomPageMain"
            android:layout_alignEnd="@+id/tvCustomPageMain"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/btn_shareBikeCustomer"
            android:textSize="20sp" />


    </RelativeLayout>
</ScrollView>
