<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ResetPassword">

    <TextView
        android:id="@+id/textViewResetPassword"
        android:layout_width="380dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/tv_ResetPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetPassWrapper"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etResetPass"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/round_text_reg"
            android:hint="@string/et_emailResetPassword"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            android:paddingLeft="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/btn_resetPass"
        android:textSize="24sp"/>

</LinearLayout>